updates after speed and seo check

--- a/website/404.html
+++ b/website/404.html
@@ -114,17 +114,20 @@
       <div class="section-footer__title section-footer__image-overlay">
         Ⓒ 2023 WayPicker
       </div>
+      <div class="section-footer__subtitle section-footer__image-overlay">
+        Orbitus Services, s.r.o.
+      </div>
       <div class="section-footer__text-wrapper section-footer__image-overlay">
         <ul class="section-footer__text">
-          <a href="index.html#home"><li>Home</li></a>
-          <a href="index.html#how-it-works"><li>How It Works</li></a>
-          <a href="index.html#how-it-helps"><li>How It Helps</li></a>
-          <a href="index.html#features"><li>Features</li></a>
+          <a href="#home"><li>Home</li></a>
+          <a href="#what-it-does"><li>What It Does</li></a>
+          <a href="#how-it-helps"><li>How It Helps</li></a>
+          <a href="#features"><li>Features</li></a>
         </ul>
         <ul class="section-footer__text">
-          <a href="index.html#faq"><li>FAQ</li></a>
-          <a href="terms-of-use/"><li>Terms of Use</li></a>
-          <a href="cookies/"><li>Cookies</li></a>
+          <a href="#faq"><li>FAQ</li></a>
+          <a href="terms-of-use"><li>Terms of Use</li></a>
+          <a href="cookies"><li>Cookies</li></a>
         </ul>
       </div>
       <div class="section-footer__button-row">
