--- a/website/cookies/index.html
+++ b/website/cookies/index.html
@@ -5,7 +5,7 @@
   prefix="fb: http://ogp.me/ns/fb#"
 >
   <head>
-    <title>WayPicker: Cookies</title>
+    <title>WayPicker: Cookie Policy</title>
 
     <link rel="canonical" href="https://waypicker.com/cookies/" />
 
@@ -17,19 +17,19 @@
     />
     <meta
       name="description"
-      content="The cookies policy for WayPicker, the world's only mapless navigation app."
+      content="The cookie policy for WayPicker, the world's only mapless navigation app."
     />
     <meta name="image" content="../resources/images/featured.png" />
     <meta
       property="og:title"
-      content="The cookies policy for WayPicker, the world's only mapless navigation app."
+      content="The cookie policy for WayPicker, the world's only mapless navigation app."
     />
     <meta property="og:url" content="https://www.waypicker.com/cookies/" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="../resources/images/featured.png" />
     <meta
       property="og:description"
-      content="The cookies policy for WayPicker, the world's only mapless navigation app."
+      content="The cookie policy for WayPicker, the world's only mapless navigation app."
     />
 
     <link rel="stylesheet" href="../css/normalize.css" />
@@ -122,20 +122,19 @@
       <h1 class="cookies__heading">Cookies</h1>
       <h2 class="cookies__title">Overview</h2>
       <div class="cookies__text">
-        WayPicker.com is owned and operated by Orbitus Services, s.r.o. The
-        company is listed in the Companies Registrar of the Czech Republic by
-        the Prague 1 Municipal District Authority since
-        13&nbspFebruary&nbsp2012, under the ID number 24218171.
-      </div>
-      <div class="cookies__text">
-        The company's offices can be found at the following address:
+        WayPicker.com is owned and operated by Orbitus Services, s.r.o.,
         Václavské&nbspnáměstí&nbsp831/21, 110&nbsp00&nbspPrague, Czech Republic.
       </div>
       <div class="cookies__text">
+        The company is listed in the Companies Registrar of the Czech Republic
+        by the Prague 1 Municipal District Authority under the ID number
+        24218171 (since 13&nbspFebruary&nbsp2012).
+      </div>
+      <div class="cookies__text">
         We can get in touch by email at
-        <a href="mailto:jakub@orbitus.cz" class="link">jakub@orbitus.cz</a>
-        or by phone at
-        <a href="tel:+420739040967" class="link">+420 739 040 967</a>.
+        <a href="mailto:waypicker@orbitus.cz" class="link"
+          >waypicker@orbitus.cz</a
+        >.
       </div>
 
       <h2 class="cookies__title">What are cookies?</h2>
@@ -183,7 +182,7 @@
               width="40"
               height="40"
               class="bulletpoint"
-              alt=""
+              alt="Bulletpoint"
             />
           </div>
           <div>
@@ -199,7 +198,7 @@
               width="40"
               height="40"
               class="bulletpoint"
-              alt=""
+              alt="Bulletpoint"
             />
           </div>
           <div>
@@ -215,7 +214,7 @@
               width="40"
               height="40"
               class="bulletpoint"
-              alt=""
+              alt="Bulletpoint"
             />
           </div>
           <div>
@@ -297,7 +296,7 @@
               width="30"
               height="26"
               class="a-way"
-              alt=""
+              alt="Overlay replacing THE way by A way"
             />
           </div>
           <div>way.</div>
@@ -321,17 +320,20 @@
       <div class="section-footer__title section-footer__image-overlay">
         Ⓒ 2023 WayPicker
       </div>
+      <div class="section-footer__subtitle section-footer__image-overlay">
+        Orbitus Services, s.r.o.
+      </div>
       <div class="section-footer__text-wrapper section-footer__image-overlay">
         <ul class="section-footer__text">
-          <a href="../#home"><li>Home</li></a>
-          <a href="../#how-it-works"><li>How It Works</li></a>
-          <a href="../#how-it-helps"><li>How It Helps</li></a>
-          <a href="../#features"><li>Features</li></a>
+          <a href="../index.html#home"><li>Home</li></a>
+          <a href="../index.html#what-it-does"><li>What It Does</li></a>
+          <a href="../index.html#how-it-helps"><li>How It Helps</li></a>
+          <a href="../index.html#features"><li>Features</li></a>
         </ul>
         <ul class="section-footer__text">
-          <a href="../#faq"><li>FAQ</li></a>
-          <a href="../terms-of-use/"><li>Terms of Use</li></a>
-          <a href="../cookies/"><li>Cookies</li></a>
+          <a href="../index.html#faq"><li>FAQ</li></a>
+          <a href="../terms-of-use"><li>Terms of Use</li></a>
+          <a href="../cookies"><li>Cookies</li></a>
         </ul>
       </div>
       <div class="section-footer__button-row">
