--- a/website/index.html
+++ b/website/index.html
@@ -108,28 +108,54 @@
           <div class="hamburger-icon__inner-block"></div>
         </div>
         <ul class="section-menu__links">
-          <a href="#home"><li>Home</li></a>
-          <a href="#how-it-works"><li>How It Works</li></a>
-          <a href="#how-it-helps"><li>How It Helps</li></a>
-          <a href="#features"><li>Features</li></a>
-          <a href="#faq"><li>FAQ</li></a>
-          <a href="#download"><li>Download</li></a>
+          <li>
+            <a href="#home"><div>Home</div></a>
+          </li>
+          <li>
+            <a href="#what-it-does"><div>What It Does</div></a>
+          </li>
+          <li>
+            <a href="#how-it-helps"><div>How It Helps</div></a>
+          </li>
+          <li>
+            <a href="#features"><div>Features</div></a>
+          </li>
+          <li>
+            <a href="#faq"><div>FAQ</div></a>
+          </li>
+          <li>
+            <a href="#download"><div>Download</div></a>
+          </li>
         </ul>
       </div>
       <ul class="section-menu__links-lg">
-        <a href="#home"><li>Home</li></a>
-        <a href="#how-it-works"><li>How It Works</li></a>
-        <a href="#how-it-helps"><li>How It Helps</li></a>
-        <a href="#features"><li>Features</li></a>
-        <a href="#faq"><li>FAQ</li></a>
-        <a href="#download"><li>Download</li></a>
+        <li>
+          <a href="#home"><div>Home</div></a>
+        </li>
+        <li>
+          <a href="#what-it-does"><div>What It Does</div></a>
+        </li>
+        <li>
+          <a href="#how-it-helps"><div>How It Helps</div></a>
+        </li>
+        <li>
+          <a href="#features"><div>Features</div></a>
+        </li>
+        <li>
+          <a href="#faq"><div>FAQ</div></a>
+        </li>
+        <li>
+          <a href="#download"><div>Download</div></a>
+        </li>
       </ul>
     </div>
 
     <div id="home" class="section section-home">
       <div class="section-home__wrapper">
         <h1>WayPicker</h1>
-        <div class="home__text">The world's only mapless navigation app</div>
+        <div class="home__text">
+          The world's only mapless navigation&nbspapp
+        </div>
         <div>
           <img
             src="resources/images/hero-sm.jpg"
@@ -140,7 +166,8 @@
           />
         </div>
         <div class="home__text-small">
-          Faced by a crossroad and unsure where to go? Fire up Waypicker.
+          Faced by a crossroad and unsure where to go?
+          Fire&nbspup&nbspWaypicker.
         </div>
         <div class="home__claim__wrapper">
           <div>Let us show you</div>
@@ -151,7 +178,7 @@
               width="30"
               height="26"
               class="a-way"
-              alt=""
+              alt="Overlay replacing THE way by A way"
             />
           </div>
           <div>way.</div>
@@ -172,8 +199,8 @@
       </div>
     </div>
 
-    <div id="how-it-works" class="section">
-      <h2>How It Works</h2>
+    <div id="what-it-does" class="section section-works">
+      <h2>What It Does</h2>
       <div class="section-works__wrapper">
         <div class="section-works__row">
           <div>
@@ -192,7 +219,7 @@
         </div>
         <div class="section-works__row">
           <div class="section-works__text">
-            Tap the image that looks like the crossroad in front of you.
+            Tap the image that looks like the crossroad in front&nbspof&nbspyou.
           </div>
           <div>
             <img
@@ -215,13 +242,13 @@
             />
           </div>
           <div class="section-works__text">
-            The app will tell you where to go.
+            The app will tell you where&nbspto&nbspgo.
           </div>
         </div>
       </div>
     </div>
 
-    <div id="how-it-helps" class="section">
+    <div id="how-it-helps" class="section section-helps">
       <h2>How It Helps</h2>
       <div class="section-helps__wrapper">
         <div>
@@ -246,7 +273,7 @@
                   width="40"
                   height="40"
                   class="bulletpoint"
-                  alt=""
+                  alt="Bulletpoint"
                 />
               </div>
               <div>
@@ -261,7 +288,7 @@
                   width="40"
                   height="40"
                   class="bulletpoint"
-                  alt=""
+                  alt="Bulletpoint"
                 />
               </div>
               <div>
@@ -276,19 +303,14 @@
                   width="40"
                   height="40"
                   class="bulletpoint helps__bulletpoint-oneliner"
-                  alt=""
+                  alt="Bulletpoint"
                 />
               </div>
               <div>Or you need a randomizer app for an urban puzzle hunt.</div>
             </li>
           </ul>
           <div class="section-helps__text">
-            Finally there’s that one situation when you are actually lost.
-            There’s no reception, you forgot to download the map and night’s
-            approaching fast.
-          </div>
-          <div class="section-helps__text">
-            Why not ask an app to pick a way back?
+            Why not ask an app to tell you where to go?
           </div>
         </div>
       </div>
@@ -305,7 +327,7 @@
             width="30"
             height="26"
             class="a-way"
-            alt=""
+            alt="Overlay replacing THE way by A way"
           />
         </div>
         <div>way.</div>
@@ -328,7 +350,7 @@
       />
     </div>
 
-    <div id="features" class="section">
+    <div id="features" class="section section-features">
       <h2>Features</h2>
       <div class="section-features__wrapper">
         <ul class="section-helps__list">
@@ -339,7 +361,7 @@
                 width="40"
                 height="40"
                 class="bulletpoint"
-                alt=""
+                alt="Bulletpoint"
               />
             </div>
             <div>
@@ -354,7 +376,7 @@
                 width="40"
                 height="40"
                 class="bulletpoint"
-                alt=""
+                alt="Bulletpoint"
               />
             </div>
             <div>
@@ -369,7 +391,7 @@
                 width="40"
                 height="40"
                 class="bulletpoint bulletpoint-oneliner"
-                alt=""
+                alt="Bulletpoint"
               />
             </div>
             <div>Three skins & dark mode support.</div>
@@ -421,7 +443,7 @@
             width="30"
             height="26"
             class="a-way"
-            alt=""
+            alt="Overlay replacing THE way by A way"
           />
         </div>
         <div>way.</div>
@@ -505,7 +527,7 @@
               width="30"
               height="26"
               class="a-way"
-              alt=""
+              alt="Overlay replacing THE way by A way"
             />
           </div>
           <div>way.</div>
@@ -529,10 +551,13 @@
       <div class="section-footer__title section-footer__image-overlay">
         Ⓒ 2023 WayPicker
       </div>
+      <div class="section-footer__subtitle section-footer__image-overlay">
+        Orbitus Services, s.r.o.
+      </div>
       <div class="section-footer__text-wrapper section-footer__image-overlay">
         <ul class="section-footer__text">
           <a href="#home"><li>Home</li></a>
-          <a href="#how-it-works"><li>How It Works</li></a>
+          <a href="#what-it-does"><li>What It Does</li></a>
           <a href="#how-it-helps"><li>How It Helps</li></a>
           <a href="#features"><li>Features</li></a>
         </ul>
