--- a/website/terms-of-use/index.html
+++ b/website/terms-of-use/index.html
@@ -123,20 +123,19 @@
       <h2 class="cookies__title">Overview</h2>
       <div class="cookies__text">
         The WayPicker iOS app and the WayPicker.com website are both owned and
-        operated by Orbitus Services, s.r.o. The company is listed in the
-        Companies Registrar of the Czech Republic by the Prague 1 Municipal
-        District Authority under the ID number 24218171 (since
-        13&nbspFebruary&nbsp2012).
+        operated by Orbitus Services, s.r.o., Václavské&nbspnáměstí&nbsp831/21,
+        110&nbsp00&nbspPrague, Czech Republic.
       </div>
       <div class="cookies__text">
-        The company's offices can be found at the following address:
-        Václavské&nbspnáměstí&nbsp831/21, 110&nbsp00&nbspPrague, Czech Republic.
+        The company is listed in the Companies Registrar of the Czech Republic
+        by the Prague 1 Municipal District Authority under the ID number
+        24218171 (since 13&nbspFebruary&nbsp2012).
       </div>
       <div class="cookies__text">
         We can get in touch by email at
-        <a href="mailto:jakub@orbitus.cz" class="link">jakub@orbitus.cz</a>
-        or by phone at
-        <a href="tel:+420739040967" class="link">+420 739 040 967</a>.
+        <a href="mailto:waypicker@orbitus.cz" class="link"
+          >waypicker@orbitus.cz</a
+        >.
       </div>
 
       <h2 class="cookies__title">Terms of Use</h2>
@@ -147,7 +146,7 @@
       <div class="cookies__text">
         The WayPicker.com website uses Google Analytics to analyze its traffic.
         For more information, please see our
-        <a href="../cookies/">Cookie Policy</a>.
+        <a class="link" href="../cookies/">Cookie Policy</a>.
       </div>
 
       <h2 class="cookies__title">Personal Data Processing</h2>
@@ -202,7 +201,7 @@
               width="30"
               height="26"
               class="a-way"
-              alt=""
+              alt="Overlay replacing THE way by A way"
             />
           </div>
           <div>way.</div>
@@ -226,17 +225,20 @@
       <div class="section-footer__title section-footer__image-overlay">
         Ⓒ 2023 WayPicker
       </div>
+      <div class="section-footer__subtitle section-footer__image-overlay">
+        Orbitus Services, s.r.o.
+      </div>
       <div class="section-footer__text-wrapper section-footer__image-overlay">
         <ul class="section-footer__text">
-          <a href="../#home"><li>Home</li></a>
-          <a href="../#how-it-works"><li>How It Works</li></a>
-          <a href="../#how-it-helps"><li>How It Helps</li></a>
-          <a href="../#features"><li>Features</li></a>
+          <a href="../index.html#home"><li>Home</li></a>
+          <a href="../index.html#what-it-does"><li>What It Does</li></a>
+          <a href="../index.html#how-it-helps"><li>How It Helps</li></a>
+          <a href="../index.html#features"><li>Features</li></a>
         </ul>
         <ul class="section-footer__text">
-          <a href="../#faq"><li>FAQ</li></a>
-          <a href="../terms-of-use/"><li>Terms of Use</li></a>
-          <a href="../cookies/"><li>Cookies</li></a>
+          <a href="../index.html#faq"><li>FAQ</li></a>
+          <a href="../terms-of-use"><li>Terms of Use</li></a>
+          <a href="../cookies"><li>Cookies</li></a>
         </ul>
       </div>
       <div class="section-footer__button-row">
