add download link to buttons

--- a/website/index.html
+++ b/website/index.html
@@ -185,13 +185,14 @@
         </div>
 
         <div>
-          <img
-            src="resources/images/appstore.svg"
-            width="200"
-            height="70"
-            class=""
-            alt="Download on the App Store"
-          />
+          <a href="https://apps.apple.com/cz/app/waypicker/id1667255844">
+            <img
+              src="resources/images/appstore.svg"
+              width="200"
+              height="70"
+              class=""
+              alt="Download on the App Store"
+          /></a>
         </div>
         <div class="android-text">
           Unfortunately, we're not on Android (yet).
@@ -333,13 +334,14 @@
         <div>way.</div>
       </div>
       <div>
-        <img
-          src="resources/images/appstore-light.svg"
-          width="155"
-          height="51"
-          class="cta__button"
-          alt="Download on the App Store"
-        />
+        <a href="https://apps.apple.com/cz/app/waypicker/id1667255844">
+          <img
+            src="resources/images/appstore-light.svg"
+            width="155"
+            height="51"
+            class="cta__button"
+            alt="Download on the App Store"
+        /></a>
       </div>
       <img
         src="resources/images/compass-cta.png"
@@ -449,13 +451,14 @@
         <div>way.</div>
       </div>
       <div>
-        <img
-          src="resources/images/appstore-light.svg"
-          width="155"
-          height="51"
-          class="cta__button"
-          alt="Download on the App Store"
-        />
+        <a href="https://apps.apple.com/cz/app/waypicker/id1667255844">
+          <img
+            src="resources/images/appstore-light.svg"
+            width="155"
+            height="51"
+            class="cta__button"
+            alt="Download on the App Store"
+        /></a>
       </div>
       <img
         src="resources/images/compass-cta.png"
@@ -533,13 +536,15 @@
           <div>way.</div>
         </div>
         <div>
-          <img
-            src="resources/images/appstore.svg"
-            width="200"
-            height="70"
-            class=""
-            alt="Download on the App Store"
-          />
+          <a href="https://apps.apple.com/cz/app/waypicker/id1667255844">
+            <img
+              src="resources/images/appstore.svg"
+              width="200"
+              height="70"
+              class=""
+              alt="Download on the App Store"
+            />
+          </a>
         </div>
         <div class="section-download__android-text">
           Unfortunately, we're not on Android (yet).
@@ -553,6 +558,7 @@
       </div>
       <div class="section-footer__subtitle section-footer__image-overlay">
         Orbitus Services, s.r.o.
+        <br /><a href="mailto:waypicker@orbitus.cz">waypicker@orbitus.cz</a>
       </div>
       <div class="section-footer__text-wrapper section-footer__image-overlay">
         <ul class="section-footer__text">
@@ -569,13 +575,14 @@
       </div>
       <div class="section-footer__button-row">
         <div>
-          <img
-            src="resources/images/appstore-light.svg"
-            width="155"
-            height="51"
-            class="cta__button"
-            alt="Download on the App Store"
-          />
+          <a href="https://apps.apple.com/cz/app/waypicker/id1667255844">
+            <img
+              src="resources/images/appstore-light.svg"
+              width="155"
+              height="51"
+              class="cta__button"
+              alt="Download on the App Store"
+          /></a>
         </div>
         <button
           aria-label="Scroll to top"
