style email link

--- a/website/index.html
+++ b/website/index.html
@@ -558,7 +558,9 @@
       </div>
       <div class="section-footer__subtitle section-footer__image-overlay">
         Orbitus Services, s.r.o.
-        <br /><a href="mailto:waypicker@orbitus.cz">waypicker@orbitus.cz</a>
+      </div>
+      <div class="section-footer__email section-footer__image-overlay">
+        <a href="mailto:waypicker@orbitus.cz">waypicker@orbitus.cz</a>
       </div>
       <div class="section-footer__text-wrapper section-footer__image-overlay">
         <ul class="section-footer__text">
