--- a/website/index.html
+++ b/website/index.html
@@ -26,7 +26,11 @@
     />
     <meta property="og:url" content="https://www.waypicker.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="resources/images/featured.png" />
+    <meta
+      property="og:image"
+      content="https://www.waypicker.com/resources/images/featured.png"
+    />
+    <meta property="og:image:type" content="image/png" />
     <meta
       property="og:description"
       content="WayPicker. The world's only mapless navigation app."
