--- a/website/index.html
+++ b/website/index.html
@@ -566,6 +566,10 @@
       <div class="section-footer__email section-footer__image-overlay">
         <a href="mailto:waypicker@orbitus.cz">waypicker@orbitus.cz</a>
       </div>
+      <div class="section-footer__credit section-footer__image-overlay">
+        Designed by
+        <a href="https://ruzickova.net" target="_blank">Barbora Růžičková</a>
+      </div>
       <div class="section-footer__text-wrapper section-footer__image-overlay">
         <ul class="section-footer__text">
           <a href="#home"><li>Home</li></a>
