--- a/website/index.html
+++ b/website/index.html
@@ -567,8 +567,7 @@
         <a href="mailto:waypicker@orbitus.cz">waypicker@orbitus.cz</a>
       </div>
       <div class="section-footer__credit section-footer__image-overlay">
-        Designed by
-        <a href="https://ruzickova.net" target="_blank">Barbora Růžičková</a>
+        <a href="https://barboraruzickova.com" target="_blank">Website design</a> by B. R.
       </div>
       <div class="section-footer__text-wrapper section-footer__image-overlay">
         <ul class="section-footer__text">
